# rust-sso

./: .env.example  Cargo.toml  README.md
migrations/: 001_init.sql  001_initial.sql
src/: config.rs  error.rs  main.rs
src/auth/: cf_access.rs  email.rs  jwt.rs  mod.rs  oidc.rs
src/db/: sessions.rs  users.rs
src/handlers/: auth.rs  mod.rs  oidc.rs  users.rs
src/middleware/: auth.rs
src/models/: mod.rs  session.rs  user.rs
src/routes/: auth.rs  health.rs  mod.rs  oidc.rs  users.rs
src/services/: config.rs  mod.rs  oidc.rs  user.rs
src/utils/: jwt.rs
