[package]
name = "rust-sso"
version = "0.1.0"
edition = "2021"
description = "High-performance SSO authentication server with OIDC support for Cloudflare Access"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-br"] }
hyper = { version = "1", features = ["full"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

# JWT + OIDC
jsonwebtoken = "9"
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
sha2 = "0.10"

# Password hashing
argon2 = "0.5"
base64 = "0.22"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# URL
url = "2"

# Cookie handling
axum-extra = { version = "0.9", features = ["cookie"] }

# HTML templates
askama = "0.12"

# URL encoding
urlencoding = "2"

[dev-dependencies]
tokio-test = "0.4"